Change result to character

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </form>
 
   
-  <div class="result" id="result"></div>
+  <div class="character" id="character"></div>
   <script src="script.js"></script>
 
 <footer>
