--- a/index.html
+++ b/index.html
@@ -12,21 +12,19 @@
   <h1>Which Friends Character Are You?</h1>
   <h3>Find out which iconic personality matches your vibe.</h3>
 
-  <form id="quizForm">
+  <!-- Form posts to Google Apps Script (no CORS issues) -->
+  <form id="quizForm" action="https://script.google.com/macros/s/AKfycbxFP3G_qnEHrfF9gSnep3UihWAOKtimI0f-UZEKhlsHM2JE9MEk_tjx1evEIYK1ut4E/exec" method="POST" target="hidden_iframe">
     <!-- Questions 1 to 5 -->
-    <!-- Repeat structure for each question -->
     <div class="question active" id="q1">
-  <h2>What’s your ideal weekend activity?</h2>
-  <label><input type="radio" name="q1" value="Rachel"> Shopping and brunch with friends</label>
-  <label><input type="radio" name="q1" value="Monica"> Cleaning and organizing your space</label>
-  <label><input type="radio" name="q1" value="Phoebe"> Playing music, relaxing, or journaling</label>
-  <label><input type="radio" name="q1" value="Ross"> Reading or going to a museum</label>
-  <label><input type="radio" name="q1" value="Chandler"> Watching stand-up or cracking jokes with friends</label>
-  <label><input type="radio" name="q1" value="Joey"> Pizza, sports, and chill with your besties</label>
-  <button type="button" onclick="next(1)">Next</button>
-  <!-- No back button here -->
-</div>
-
+      <h2>What’s your ideal weekend activity?</h2>
+      <label><input type="radio" name="q1" value="Rachel"> Shopping and brunch with friends</label>
+      <label><input type="radio" name="q1" value="Monica"> Cleaning and organizing your space</label>
+      <label><input type="radio" name="q1" value="Phoebe"> Playing music, relaxing, or journaling</label>
+      <label><input type="radio" name="q1" value="Ross"> Reading or going to a museum</label>
+      <label><input type="radio" name="q1" value="Chandler"> Watching stand-up or cracking jokes with friends</label>
+      <label><input type="radio" name="q1" value="Joey"> Pizza, sports, and chill with your besties</label>
+      <button type="button" onclick="next(1)">Next</button>
+    </div>
 
     <div class="question" id="q2">
       <h2>How do you handle stress?</h2>
@@ -36,12 +34,10 @@
       <label><input type="radio" name="q2" value="Ross"> Analyze it to death</label>
       <label><input type="radio" name="q2" value="Chandler"> Laugh it off with sarcasm</label>
       <label><input type="radio" name="q2" value="Joey"> Ignore it and eat snacks</label>
-
       <div class="btn-row">
-      <button type="button" class="backBtn" onclick="goBack(2)">← Back</button>
-      <button type="button" onclick="next(2)">Next</button>
+        <button type="button" class="backBtn" onclick="goBack(2)">← Back</button>
+        <button type="button" onclick="next(2)">Next</button>
       </div>
-
     </div>
 
     <div class="question" id="q3">
@@ -52,12 +48,10 @@
       <label><input type="radio" name="q3" value="Ross"> Intelligence & curiosity</label>
       <label><input type="radio" name="q3" value="Chandler"> Humor & wit</label>
       <label><input type="radio" name="q3" value="Joey"> Confidence & fun energy</label>
-
       <div class="btn-row">
-      <button type="button" class="backBtn" onclick="goBack(3)">← Back</button>
-      <button type="button" onclick="next(3)">Next</button>
+        <button type="button" class="backBtn" onclick="goBack(3)">← Back</button>
+        <button type="button" onclick="next(3)">Next</button>
       </div>
-
     </div>
 
     <div class="question" id="q4">
@@ -68,12 +62,10 @@
       <label><input type="radio" name="q4" value="Ross"> Complicated but committed</label>
       <label><input type="radio" name="q4" value="Chandler"> Scared of commitment but wants love</label>
       <label><input type="radio" name="q4" value="Joey"> Flirty and fun</label>
-
       <div class="btn-row">
-      <button type="button" class="backBtn" onclick="goBack(4)">← Back</button>
-      <button type="button" onclick="next(4)">Next</button>
+        <button type="button" class="backBtn" onclick="goBack(4)">← Back</button>
+        <button type="button" onclick="next(4)">Next</button>
       </div>
-
     </div>
 
     <div class="question" id="q5">
@@ -84,12 +76,10 @@
       <label><input type="radio" name="q5" value="Ross"> “We were on a break!”</label>
       <label><input type="radio" name="q5" value="Chandler"> “Could I be wearing any more clothes?”</label>
       <label><input type="radio" name="q5" value="Joey"> “How you doin’?”</label>
-
       <div class="btn-row">
-      <button type="button" class="backBtn" onclick="goBack(5)">← Back</button>
-      <button type="button" onclick="next(5)">Next</button>
+        <button type="button" class="backBtn" onclick="goBack(5)">← Back</button>
+        <button type="button" onclick="next(5)">Next</button>
       </div>
-
     </div>
 
     <div class="question" id="q6">
@@ -104,24 +94,26 @@
       </select>
 
       <h3>Tell us your name and email to reveal your result and receive updates from The One With the Newsletter:</h3>
-      <input type="text" name="name" placeholder="Your first name" required>
-      <input type="email" name="email" placeholder="Your email address" required>
-      
-      <div class="btn-row">
-      <button type="button" class="backBtn" onclick="goBack(6)">← Back</button>
-      <button type="submit"><strong>Reveal My Character</strong></button>
-      </div>
+      <input type="text" name="name" id="visibleName" placeholder="Your first name" required>
+      <input type="email" name="email" id="visibleEmail" placeholder="Your email address" required>
 
+      <input type="hidden" name="result" id="resultField">
+
+      <div class="btn-row">
+        <button type="button" class="backBtn" onclick="goBack(6)">← Back</button>
+        <button type="submit"><strong>Reveal My Character</strong></button>
+      </div>
     </div>
   </form>
 
-  
+  <!-- Hidden iframe to catch form post -->
+  <iframe name="hidden_iframe" style="display:none;"></iframe>
+
   <div class="character" id="character"></div>
   <script src="script.js"></script>
 
-<footer>
-  created by <strong><a href="https://instagram.com/rachelsfriendsmedia" target="_blank">@rachelsfriendsmedia</a></strong>
-</footer>
-
+  <footer>
+    created by <strong><a href="https://instagram.com/rachelsfriendsmedia" target="_blank">@rachelsfriendsmedia</a></strong>
+  </footer>
 </body>
 </html>
